--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Exercício ativos</title>
 </head>
 <body>
-    
-    <table>
-        <tr></tr>
-    </table>
+	<table>
+
+		<tr>
+			<th></th>
+			<th id="nome_ativo" class="right-border">Ativos<span>(3)</span></th>
+			<th>
+				R$ <input id="total" type="number"/>
+				<br><span id="restante">(Restante: -720,32)</span>
+			</th>
+			<th class="right-border"> <span id="porcentagem_total"> 107,20 %</span></th>
+			<th id="excluir"> X </th>
+		</tr>
+
+		<!-- modelo -->
+		<tr>
+			<td><input type="checkbox"/></td>
+			<td id="nome_ativo" class="right-border">SPARTA CÍCLICO FI MULTIMERCADO</td>
+			<td>R$ <input id="total" type="number"/></td>
+			<td class="right-border"><input type="text"></td>
+			<th id="excluir">X</th>
+		</tr>
+		<tr>
+				<td><input type="checkbox"/></td>
+				<td id="nome_ativo" class="right-border">SPARTA CÍCLICO FI MULTIMERCADO</td>
+				<td>R$ <input id="total" type="number"/></td>
+				<td class="right-border"><input type="text"></td>
+				<th id="excluir">X</th>
+			</tr>
+			<tr>
+					<td><input type="checkbox"/></td>
+					<td id="nome_ativo" class="right-border">SPARTA CÍCLICO FI MULTIMERCADO</td>
+					<td>R$ <input id="total" type="number"/></td>
+					<td class="right-border"><input type="text"></td>
+					<th id="excluir">X</th>
+				</tr>
+
+		
+	</table>
+	<button>Adicionar Ativo</button>
+
+
+
 </body>
 <script type="text/javascript" src="js/index.js"></script>
 </html>
