implementado gerar ativo visual

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Exercício ativos</title>
 </head>
 <body>
-	<table>
+	<table id="table_ativos">
 
 		<tr>
 			<th></th>
@@ -21,32 +21,18 @@
 			<th id="excluir"> X </th>
 		</tr>
 
-		<!-- modelo -->
+		<!-- modelo 
 		<tr>
 			<td><input type="checkbox"/></td>
 			<td id="nome_ativo" class="right-border">SPARTA CÍCLICO FI MULTIMERCADO</td>
-			<td>R$ <input id="total" type="number"/></td>
-			<td class="right-border"><input type="text"></td>
-			<th id="excluir">X</th>
+			<td>R$ <input id="" type="number"/></td>
+			<td class="right-border"><input id="" type="text"></td>
+			<td id="excluir" class="hidden-button"><button id="id">X</button></td>
 		</tr>
-		<tr>
-				<td><input type="checkbox"/></td>
-				<td id="nome_ativo" class="right-border">SPARTA CÍCLICO FI MULTIMERCADO</td>
-				<td>R$ <input id="total" type="number"/></td>
-				<td class="right-border"><input type="text"></td>
-				<th id="excluir">X</th>
-			</tr>
-			<tr>
-					<td><input type="checkbox"/></td>
-					<td id="nome_ativo" class="right-border">SPARTA CÍCLICO FI MULTIMERCADO</td>
-					<td>R$ <input id="total" type="number"/></td>
-					<td class="right-border"><input type="text"></td>
-					<th id="excluir">X</th>
-				</tr>
-
-		
+	-->
 	</table>
 	<button>Adicionar Ativo</button>
+
 
 
 
