adicionar ativo e eventos

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 	<table id="table_ativos">
-
+	
 		<tr>
 			<th></th>
-			<th id="nome_ativo" class="right-border">Ativos<span>(3)</span></th>
+			<th id="nome_ativo" class="right-border">Ativos<span id="qtsAtivos">(3)</span></th>
 			<th>
 				R$ <input id="total" type="number"/>
 				<br><span id="restante">(Restante: -720,32)</span>
@@ -21,7 +21,8 @@
 			<th id="excluir"> X </th>
 		</tr>
 
-		<!-- modelo 
+		<!-- 
+	modelo s
 		<tr>
 			<td><input type="checkbox"/></td>
 			<td id="nome_ativo" class="right-border">SPARTA CÍCLICO FI MULTIMERCADO</td>
@@ -31,7 +32,7 @@
 		</tr>
 	-->
 	</table>
-	<button>Adicionar Ativo</button>
+	<button id="btnAdd">Adicionar ativo</button>
 
 
 
